main page jumping slides fixed

--- a/poker-web/sass/style.sass
+++ b/poker-web/sass/style.sass
@@ -205,6 +205,7 @@ body
     filter: blur(5px)
     width: 315px
     transition: $animation
+    margin: 32.5px 0
     .slide-text
       width: 70%
       margin: auto
@@ -221,8 +222,7 @@ body
     &.active
       width: 450px
       filter: none
-      margin-left: 45px
-      margin-right: 45px
+      margin: 0 45px
       .title
         font-size: 28px
       .slide-text
